--- a/src/views/admin/auth/login.ejs
+++ b/src/views/admin/auth/login.ejs
@@ -11,12 +11,15 @@
     <form action="/auth/login" method="POST">
         <!-- Email Input -->
         <div class="mb-4">
-            <input type="email" name="email" placeholder="Silahkan masukkan email..." class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-teal-500" required>
+            <input type="email" id="password" name="email" placeholder="Silahkan masukkan email..." class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-teal-500" required>
         </div>
         <!-- Password Input -->
         <div class="mb-6">
-            <input type="password" name="password" placeholder="Silahkan masukkan password..." class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-teal-500" required>
+            <input type="password" autocomplete="on" id="password" name="password" placeholder="Silahkan masukkan password..." class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-teal-500" required>
         </div>
+        <% if (messages.error) { %>
+                  <div class="text-xs mt-1 text-rose-500"><%= messages.error %></div>
+              <% } %>
         <!-- Login Button -->
         <div class="flex justify-center">
             <button type="submit" class="bg-white text-teal-900 font-bold py-2 px-6 rounded-md hover:bg-gray-200">
