--- a/src/views/layouts/admin/admin_navbar.ejs
+++ b/src/views/layouts/admin/admin_navbar.ejs
@@ -93,9 +93,8 @@
         >
           <span class="hidden text-right lg:block">
             <span class="block text-sm font-medium text-black dark:text-white"
-              >Thomas Anree</span
+              ><%= lgnUser.email %></span
             >
-            <span class="block text-xs font-medium">UX Designer</span>
           </span>
 
           <span class="h-12 w-12 rounded-full">
@@ -125,7 +124,8 @@
           x-show="dropdownOpen"
           class="absolute right-0 mt-4 flex w-62.5 flex-col rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-boxdark"
         >
-          <button
+          <a
+          href="/auth/logout"
             class="flex items-center gap-3.5 px-6 py-4 text-sm font-medium duration-300 ease-in-out hover:text-primary lg:text-base"
           >
             <svg
@@ -146,7 +146,7 @@
               />
             </svg>
             Log Out
-          </button>
+          </a>
         </div>
         <!-- Dropdown End -->
       </div>
